package edu.fiuba.algo3.modelo;

public interface Atacable {
    void sufrirAtaque(int danio);
}
