package edu.fiuba.algo3.modelo;

public interface Regenerativo {
    
    public void regenerar();
}
